# Climate_Control_2

./: .gitignore  CMakeLists.txt  CMakePresets.json  ConfigModule.cmake  ConfigUnitTest.cmake  README.md  check_file.c
.devcontainer/: Dockerfile  devcontainer.json
docs/: CMakeReadme.md  architecture.md  architecture.txt  coverage.info  format_rules.md
firmware/0_core/: CMakeLists.txt
firmware/0_core/c_errors/: CMakeLists.txt
firmware/0_core/c_errors/example/: c_errors_example.c
firmware/0_core/c_errors/include/: c_errors.h  c_errors_internal.h  c_errors_list.def  c_errors_public.h  c_errors_test.h
firmware/0_core/c_errors/src/: c_errors.c
firmware/0_core/c_errors/test/: c_errors_test.c
firmware/0_core/j_errors/example/: j_errors_example.c
firmware/0_core/j_errors/include/: j_errors.h  j_errors_list.def  j_errors_test.h
firmware/0_core/j_errors/src/: j_errors.c
firmware/0_core/j_errors/test/: j_errors_test.c
firmware/0_core/jesse_errors/example/: jesse_errors_example.c
firmware/0_core/jesse_errors/include/: errors_list_example.def  jesse_errors.h
firmware/0_core/jesse_errors/src/: jesse_errors.c
firmware/1_libs/: CMakeLists.txt
firmware/1_libs/c_buffer/: CMakeLists.txt
firmware/1_libs/c_buffer/example/: c_buffer_example.c
firmware/1_libs/c_buffer/include/: c_buffer.h  c_buffer_list.def  c_buffer_test.h
firmware/1_libs/c_buffer/src/: c_buffer.c
firmware/1_libs/c_buffer/test/: c_buffer_test.c
firmware/1_libs/c_time_wrapper/: CMakeLists.txt
firmware/1_libs/c_time_wrapper/example/: c_time_wrapper_example.c
firmware/1_libs/c_time_wrapper/include/: c_time_wrapper.h
firmware/1_libs/c_time_wrapper/src/: c_time_wrapper.c
firmware/1_libs/c_time_wrapper/test/: c_time_wrapper_test.c
firmware/1_libs/c_users/: CMakeLists.txt
firmware/1_libs/c_users/example/: c_users_example.c
firmware/1_libs/c_users/include/: c_users.h  c_users_commads_list.def  c_users_list.def
firmware/1_libs/c_users/src/: c_users.c
firmware/1_libs/c_users/test/: c_users_test.c
firmware/1_libs/j_buffer/include/: j_buffer.h  j_buffer_test.h
firmware/1_libs/j_buffer/src/: j_buffer.c
firmware/1_libs/j_buffer/test/: j_buffer_test.c
firmware/1_services/jesse_buffer/include/: jesse_buffer.h
firmware/1_services/jesse_buffer/src/: jesse_buffer.c
firmware/1_services/jesse_buffer_api/example/: jesse_buffer_api_example.c
firmware/1_services/jesse_buffer_api/include/: jesse_buffer_api.h
firmware/1_services/jesse_buffer_api/src/: jesse_buffer_api.c
firmware/2_managers/jesse_errors_manager/example/: jesse_errors_api_example.c
firmware/2_managers/jesse_errors_manager/include/: jesse_errors_manager.h
firmware/2_managers/jesse_errors_manager/src/: jesse_errors_manager.c
firmware/2_services/: CMakeLists.txt
firmware/2_services/c_errors_writer/: CMakeLists.txt
firmware/2_services/c_errors_writer/example/: c_errors_writer_example.c
firmware/2_services/c_errors_writer/include/: c_errors_writer.h  c_errors_writer_test.h
firmware/2_services/c_errors_writer/src/: c_errors_writer.c
firmware/2_services/c_errors_writer/test/: c_errors_writer_test.c
firmware/2_services/j_buffer/example/: j_buffer_example.c
firmware/2_services/j_buffer/include/: j_buffer.h  j_buffer_test.h
firmware/2_services/j_buffer/src/: j_buffer.c
firmware/2_services/j_buffer/test/: j_buffer_test.c
firmware/2_services/j_errors_writer/example/: j_errors_writer_example.c
firmware/2_services/j_errors_writer/include/: j_errors_writer.h  j_errors_writer_test.h
firmware/2_services/j_errors_writer/src/: j_errors_writer.c
firmware/2_services/j_errors_writer/test/: j_errors_writer_test.c
firmware/3_application/include/: climate_control_2.h  errors_list.def
firmware/3_managers/j_errors_manager/example/: j_errors_api_example.c
firmware/3_managers/j_errors_manager/include/: j_errors_manager.h
firmware/3_managers/j_errors_manager/src/: j_errors_manager.c
firmware/4_application/: CMakeLists.txt
firmware/4_application/include/: climate_control_2.h
firmware/4_application/src/: climate_control_2.c
firmware/4_application/test/: run_all_tests.c
modules/jesse_buffer/example/: jesse_buffer_example.c
modules/jesse_buffer/include/: jesse_buffer.h
modules/jesse_buffer/src/: jesse_buffer.c
modules/jesse_buffer_api/example/: jesse_buffer_api_example.c
modules/jesse_errors/example/: jesse_errors_example.c
modules/jesse_errors/include/: jesse_errors.h
modules/jesse_errors/src/: jesse_errors.c
modules/jesse_errors_api/example/: jesse_errors_api_example.c
modules/jesse_errors_api/src/: jesse_errors_api.c
